adding some content

--- a/README
+++ b/README
@@ -1,7 +1,1 @@
-README
-=====
-
-This is a readme. Read me!
-Another line.
-Changed in branch myb. Again! Changed in master! And again (in myb)!
-New change.
+Some new content
